--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".LoginActivity" >
 
+    <!--TODO: Style this thing. -->
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
