Various layout improvements (SC 8/6/2016)

--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -2,6 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/topFrame"
+    android:layout_above="@+id/bottomFrame"
     tools:context="com.codepath.apps.SimpleTwitterClient.Activities.ComposeFragment">
 
 
@@ -13,16 +15,9 @@
         android:id="@+id/btnCancel"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnTweet"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:text="@string/btnTweet" />
+        android:layout_alignParentStart="true"
+        android:textSize="30dp"
+        android:background="@android:color/transparent"/>
 
     <ImageView
         android:layout_width="50dp"
@@ -41,19 +36,11 @@
         android:layout_below="@+id/btnCancel"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_above="@+id/btnTweet"
         android:layout_alignRight="@+id/ivTargetImage"
         android:layout_alignEnd="@+id/ivTargetImage"
         android:hint="@string/etCompose"
         android:maxLength="140"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvCounter"
-        android:layout_alignTop="@+id/btnTweet"
-        android:layout_toLeftOf="@+id/btnTweet"
-        android:layout_toStartOf="@+id/btnTweet" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -69,5 +56,34 @@
         android:id="@+id/tvName"
         android:layout_below="@+id/tvUserName"
         android:layout_toLeftOf="@+id/ivTargetImage"
-        android:layout_toStartOf="@+id/ivTargetImage" />
+        android:layout_toStartOf="@+id/ivTargetImage"
+        android:layout_alignBottom="@+id/ivProfileImage"/>
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/bottomFrame"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:gravity="center"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvCounter"
+            android:textColor="#808080" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnTweet"
+            android:text="@string/btnTweet"
+            android:background="@drawable/round_shape_btn"
+            android:textColor="#FFFFFF"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"/>
+    </LinearLayout>
 </RelativeLayout>
