--- a/app/src/main/res/layout/tweet_layout.xml
+++ b/app/src/main/res/layout/tweet_layout.xml
@@ -15,8 +15,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        />
+        android:layout_marginRight="5dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -32,7 +31,9 @@
         android:id="@+id/tvTweetBody"
         android:layout_below="@id/tvUserName"
         android:layout_toRightOf="@+id/ivProfileImage"
-        android:layout_toEndOf="@+id/ivProfileImage" />
+        android:layout_toEndOf="@+id/ivProfileImage"
+        android:autoLink="all"
+        android:linksClickable="true"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -52,6 +53,13 @@
         android:layout_alignParentEnd="true"
         android:paddingRight="5dp"
         android:textColor="#a9a9a9a9"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/ivMediaUrl"
+        android:layout_alignLeft="@+id/ivProfileImage"
+        android:layout_below="@id/tvTweetBody"/>
 
 
 </RelativeLayout>
