Refactor most things to fragments.  Detail and swipe to refresh disabled.  (SC 8/11/2016)

--- a/app/src/main/res/menu/timeline_menu.xml
+++ b/app/src/main/res/menu/timeline_menu.xml
@@ -7,6 +7,12 @@
         app:showAsAction="ifRoom"
         android:title="Compose">
     </item>
+    <item
+        android:id="@+id/miProfile"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_profile"
+        android:title="Profile">
+    </item>
 
 
 </menu>
