--- a/app/src/main/res/layout/tweet_layout.xml
+++ b/app/src/main/res/layout/tweet_layout.xml
@@ -15,7 +15,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp" />
+        android:layout_marginRight="5dp"
+        android:clickable="true"/>
 
     <TextView
         android:layout_width="wrap_content"
