Refactor fragments, loading notices and fixed refresh (SC 8/12/2016)

--- a/app/src/main/res/menu/timeline_menu.xml
+++ b/app/src/main/res/menu/timeline_menu.xml
@@ -10,7 +10,7 @@
     <item
         android:id="@+id/miProfile"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_profile"
+        android:icon="@mipmap/ic_profile"
         android:title="Profile">
     </item>
 
