--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:id="@+id/topFrame"
     android:layout_above="@+id/bottomFrame"
-    tools:context="com.codepath.apps.SimpleTwitterClient.Activities.ComposeFragment">
+    tools:context=".Fragments.ComposeFragment">
 
 
     <Button
