--- a/app/src/main/res/layout/fragment_tweets_list.xml
+++ b/app/src/main/res/layout/fragment_tweets_list.xml
@@ -8,7 +8,6 @@
         android:id="@+id/swipeContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvTweets"
             android:layout_width="match_parent"
@@ -19,7 +18,11 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"/>
-
     </android.support.v4.widget.SwipeRefreshLayout>
+    <ProgressBar
+        android:id="@+id/pbLoading"
+        android:visibility="visible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
